# regilo

./: .codedocs  .editorconfig  .gitattributes  .gitignore  .oclint  .travis.yml  CMakeLists.txt  README.md
cmake/: cmake_uninstall.cmake.in
examples/: CMakeLists.txt
examples/neatoc-scan/: CMakeLists.txt
examples/neatoc-scan-gui/: CMakeLists.txt
examples/neatoc-scan-gui/include/: neatocscanapp.hpp
examples/neatoc-scan-gui/src/: main.cpp  neatoc-scan-gui.cpp  neatocscanapp.cpp
examples/neatoc-scan/src/: main.cpp  neatoc-scan.cpp
examples/regilo-scan/: CMakeLists.txt
examples/regilo-scan/src/: main.cpp
examples/regilo-visual/: CMakeLists.txt
examples/regilo-visual/include/: regilovisual.hpp
examples/regilo-visual/src/: main.cpp  regilovisual.cpp
include/neatoc/: controller.hpp  hokuyocontroller.hpp  log.hpp  neatocontroller.hpp  scandata.hpp  scanrecord.hpp
include/regilo/: controller.hpp  hokuyocontroller.hpp  log.hpp  neatocontroller.hpp  scancontroller.hpp  scandata.hpp  scanrecord.hpp  serialcontroller.hpp  socketcontroller.hpp  streamcontroller.hpp  timedlog.hpp  utils.hpp  version.hpp
src/neatoc/: controller.cpp  hokuyocontroller.cpp  log.cpp  neatocontroller.cpp  scandata.cpp  scanrecord.cpp
src/regilo/: hokuyocontroller.cpp  log.cpp  neatocontroller.cpp  scandata.cpp  scanrecord.cpp  serialcontroller.cpp  socketcontroller.cpp  timedlog.cpp  utils.cpp  version.cpp.in
tests/: CMakeLists.txt
tests/data/: hokuyo-correct-scan.txt  hokuyo-log-scan-version.txt  hokuyo-log.txt  hokuyo-timed-log.txt  neato-correct-scan.txt  neato-log-scan-move-time.txt  neato-timed-log-scan-move-time.txt
tests/include/simulators/: serialsimulator.hpp  simulator.hpp  socketsimulator.hpp
tests/src/: logsuite.cpp  main.cpp  scanrecorddatasuite.cpp  serialcontrollersuite.cpp  utilssuite.cpp
tests/src/simulators/: serialsimulator.cpp  simulator.cpp  socketsimulator.cpp
tests/src/suites/: hokuyocontrollersuite.cpp  logsuite.cpp  neatocontrollersuite.cpp  scanrecorddatasuite.cpp  streamcontrollersuite.cpp  utilssuite.cpp
